# student-grading-cpp

./: CMakeLists.txt  Student.cpp  Student.h  StudentFileManager.cpp  StudentFileManager.h  StudentGrading.cpp  StudentGrading.h  StudentPrinter.cpp  StudentPrinter.h  main.cpp
include/: Student.h  StudentGrading.h
src/: Student.cpp  StudentFileManager.cpp  StudentGrading.cpp  StudentPrinter.cpp
